gap, btn fix

--- a/styles/blocks/_cart-form.scss
+++ b/styles/blocks/_cart-form.scss
@@ -6,6 +6,7 @@
     width: 360px;
 
     @media(max-width: 599px) {
+        padding-top: 0;
         width: 100%;
     }
 
