--- a/styles/style.css
+++ b/styles/style.css
@@ -1094,6 +1094,7 @@ a {
 @media (max-width: 1216px) {
   .product-catalog .center-container {
     flex-direction: row-reverse;
+    gap: 16px;
   }
 }
 @media (max-width: 649px) {
@@ -1508,6 +1509,11 @@ a {
     gap: 64px;
   }
 }
+@media (max-width: 599px) {
+  .cart__content {
+    gap: 48px;
+  }
+}
 .cart__content-left {
   display: flex;
   flex-direction: column;
@@ -1543,12 +1549,6 @@ a {
 @media (max-width: 599px) {
   .cart__buttons {
     gap: 9px;
-  }
-}
-@media (max-width: 374px) {
-  .cart__buttons {
-    flex-direction: column;
-    align-items: center;
   }
 }
 .cart__button {
@@ -1588,6 +1588,7 @@ a {
 @media (max-width: 599px) {
   .cart__content-right {
     flex-direction: column;
+    gap: 0;
   }
 }
 
@@ -1733,6 +1734,7 @@ a {
 }
 @media (max-width: 599px) {
   .cart-form {
+    padding-top: 0;
     width: 100%;
   }
 }
